codeforge-test-env/codeforge/codeforge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeforge-app
  labels:
    app: codeforge-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeforge-app
  template:
    metadata:
      labels:
        app: codeforge-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - name: codeforge-app-pod
          image: 604915685483.dkr.ecr.us-east-1.amazonaws.com/codeforge-app
          ports:
            - containerPort: 3000
      nodeSelector:
        kubernetes.io/os: linux

---
kind: Service
apiVersion: v1
metadata:
  name: codeforge
spec:
  selector:
    app: codeforge-app
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
